# platformer-sample-gameplay3d

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  default_user.config  external-deps  game.config  user.config
android/: AndroidManifest.xml  build.xml  project.properties
android/gameplay/jni/: Android.mk  Application.mk
android/jni/: Android.mk  Application.mk
raw/automation/: Android.mk  Application.mk  mklink_win32.bat
raw/levels/: 0.json  0.tmx  1.json  1.tmx  rules.json
raw/spritesheets/: bg.json  bg.pdn  bg.tps  collectables.json  collectables.tps  enemy.json  enemy.tps  gamepad.pdn  interactables.json  interactables.tps  player.json  player.tps  rules.json  screen.json  screen.tps  tiles.json
raw/templates/: Android.mk
res/fonts/: debug.gpb
res/gameobjects/: enemy_fish.go  enemy_slime.go  enemy_snail.go  enemy_spider.go  level_0.go  level_1.go  player.go  root.go
res/levels/: 0.level  0.ss  1.level  1.ss
res/lua/: run_tools.lua
res/lua/tools/: build_android.lua  convert_json.lua  crush_pngs.lua  deploy_android.lua  generate_android.lua
res/parallax/: countryside.parallax
res/physics/: characters.physics  level.physics
res/scenes/: gameobjects.scene
res/shaders/: water.frag
res/spritesheets/: bg.ss  collectables.ss  enemy.ss  interactables.ss  player.ss  screen.ss
res/ui/: gamepad.form  options.form
src/: AudioComponent.cpp  CameraControlComponent.cpp  CameraControlComponent.h  CollisionHandlerComponent.cpp  CollisionHandlerComponent.h  CollisionObjectComponent.cpp  CollisionObjectComponent.h  Common.cpp  Common.h  EnemyComponent.cpp  EnemyComponent.h  LevelCollision.cpp  LevelCollision.h  LevelComponent.cpp  LevelComponent.h  LevelLoaderComponent.cpp  LevelLoaderComponent.h  LevelRendererComponent.cpp  LevelRendererComponent.h  Messages.h  MessagesInput.cpp  MessagesInput.h  MessagesLevel.cpp  MessagesLevel.h  MessagesPlatformer.cpp  MessagesPlatformer.h  MessagesPlayer.cpp  MessagesPlayer.h  NodeData.h  Platformer.cpp  Platformer.h  PlatformerCollision.cpp  PlatformerCollision.h  PlatformerEventForwarderComponent.cpp  PlatformerEventForwarderComponent.h  PlayerAudioComponent.cpp  PlayerAudioComponent.h  PlayerComponent.cpp  PlayerComponent.h  PlayerHandOfGodComponent.cpp  (+16 more)
src/org/gameplay3d/: GamePlayNativeActivity.java
